src/test/deca/context/invalid/self/doubleDeclaration3.deca
class A {
            void declare(){
                int a;
                int a;
            }
        }